[metadata]
name = retrekpy
version = 2024.04.1
author = Shoichi Ishida, Ryosuke Kojima
author_email = ishida.sho.nm@yokohama-cu.ac.jp, kojima.ryosuke.8e@kyoto-u.ac.jp
description = The Retrosynthesis Planning Application using Retrosynthesis Knowledge (ReTReK) package.
long_description = file: README.md
